# HtyBox

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  RELEASING.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
Document/: 01-产品与架构.md  02-后端Rust设计.md  03-前端React设计.md  04-数据模型与注入.md  05-里程碑与任务拆解.md  06-风险测试与打包.md  07-工作区管理.md  08-多Agent协作设计.md  README.md
src/: App.tsx  agentStatus.ts  bookmarks.ts  catalog.ts  dockBus.ts  fileIgnore.ts  fontKeys.ts  fonts.ts  index.css  main.tsx  mcp.ts  profiles.ts  protocol.ts  runConfigs.ts  search.ts  sessionTags.ts  sessionTitles.ts  settings.ts  skillTemplates.ts  tagColors.ts  teams.ts  theme.ts  themeKeys.ts  updater.ts  wsState.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: render-bmp.mjs
src-tauri/src/: broker.rs  catalog.rs  fs_tree.rs  host_identity.rs  lib.rs  main.rs  pty.rs  relay_client.rs  sessions.rs  terminal_core.rs  watcher.rs  ws_host.rs
src/components/: BookmarkBar.tsx  CollabModal.tsx  ConnectionSettings.tsx  DockActionsMenu.tsx  DockEditor.tsx  FileContextMenu.tsx  FileIgnoreModal.tsx  FilePanel.tsx  MemoryPanel.tsx  QuickOpen.tsx  RunConfigBar.tsx  RunConfigModal.tsx  RunPanel.tsx  SessionPanel.tsx  SettingsModal.tsx  Sidebar.tsx  SkillPanel.tsx  SkillTemplateModal.tsx  TagEditor.tsx  TeamEditor.tsx  TemplatePicker.tsx  TerminalDock.tsx  TerminalView.tsx  UpdateModal.tsx  WakeToasts.tsx  Welcome.tsx  WindowControls.tsx  terminalEngine.ts
src/components/ui/: ConfirmModal.tsx  (+5 more)
