[package]
name = "htybox-app"
version = "1.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "htybox_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
portable-pty = "0.9.0"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
dirs = "6.0.0"
notify-debouncer-mini = "0.7.0"
tauri-plugin-dialog = "2.7.1"
tiny_http = "0.12.0"
toml_edit = "0.25.12"
trash = "5"
tauri-plugin-process = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
axum = { version = "0.8.9", features = ["ws"] }
futures-util = "0.3.32"
htybox-link = { path = "../../HtyBox_link/crates/htybox-link" }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tokio-tungstenite = "0.29"

